--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,3 +26,16 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+
+  fonts:
+      - family: Pretendard
+        fonts:
+          - asset: fonts/Pretendard-Regular.ttf
+            weight: 400
+          - asset: fonts/Pretendard-Medium.ttf
+            weight: 500
+          - asset: fonts/Pretendard-SemiBold.ttf
+            weight: 600
+          - asset: fonts/Pretendard-Bold.ttf
+            weight: 700
