--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   flutter_local_notifications: ^9.1.5
   flutter_riverpod: ^2.3.6
   go_router: ^13.1.0
+  json_annotation: ^4.9.0
   pretty_dio_logger: ^1.3.1
+  retrofit: '>=4.0.0 <5.0.0'
   workmanager: ^0.5.2
 
 dev_dependencies:
