--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   dio: ^5.2.1
+  envied: ^0.5.4+1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_local_notifications: ^9.1.5
@@ -20,6 +22,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.5
+  envied_generator: ^0.5.4+1
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
