--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   json_annotation: ^4.9.0
   pretty_dio_logger: ^1.3.1
   retrofit: '>=4.0.0 <5.0.0'
+  supabase_flutter: ^2.5.9
   workmanager: ^0.5.2
 
 dev_dependencies:
