--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^9.1.5
+  flutter_naver_map: ^1.2.3+1
   flutter_riverpod: ^2.3.6
   go_router: ^13.1.0
   json_annotation: ^4.9.0
